--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<ul>
 			<li id="home">INÍCIO</li>
 			<li id="sobre">Sobre</li>
-			<li id="edudev">Edu-Dev</li>
+			<li id="edujogos">EduJogos</li>
 			<li id="portfolio">Portfólio</li>
 			<li id="contato">Contato</li>
 		</ul>
@@ -38,18 +38,38 @@
 			<p>Rodolfo Porto Barreto, 28 anos, natural de Valença (BA), reside em Salvador.</p>
 			<p>
 				Bacharel em Ciências Biológicas pela Universidade Federal da Bahia, com período sanduíche pelo
-				programa Ciências sem Fronteiras na Indiana University. Possui experiência em CSTA (Programa PIBID)
-				e Educação Ambiental.</p>
+				programa Ciências sem Fronteiras na Indiana University. Licenciatura em Ciências Biológicas em andamento
+				pela Universidade Salvador.</p>
+			<p> Possui experiência em CSTA (Programa PIBID)
+				e Educação Ambiental, atuando em parques urbanos e empresa de manejo de resíduos sólidos. Também possui
+				experiência na área de Taxonomia de invertebrados marinhos e gastrópodes, e ecologia urbana através de
+				programas de iniciação científica.
+			</p>
+			<p>Por optar pelo prosseguimento da familiar carreira de Bombeiro Militar, que resgata a história desde seu
+				avô paterno, realizou o Curso de Formação de Oficiais na Bahia Academia de Bombeiros Militar
+				da Bahia.
+			</p>
 			<p>
-				Licenciatura em Ciências Biológicas em andamento pela Universidade Salvador.
-				Curso de Formação de Oficiais Bombeiros Militar pela Academia de Bombeiros Militar da Bahia.</p>
-			<p>
-				Possui interesse em programação para fins educacionais, divulgação científica por meios virtuais e
-				compreende a difusão da
-				tecnologia como meio de democratização do conhecimento.</p>
+				Possui interesse em programação para fins educacionais e divulgação científica. Compreende a difusão da
+				tecnologia como meio de democratização do conhecimento, além de importante aliada nas políticas de
+				conservação ambiental.</p>
+			<p>Currículo Lattes: <a href="http://lattes.cnpq.br/1293495437930627" target="_blank"><img
+						src="lattesicon.png"></a></p>
 		</div>
-		<div id="edudevTexto">
-			<p>PREENCHER</p>
+		<div id="edujogosTexto">
+			<p>O portal EduJogos.com.br foi criado por Rodolfo Barreto com a proposta de fornecer recursos didáticos
+				acessíveis aos profissionais de educação.</p>
+			<p>Os benefícios da aplicação de jogos didáticos é recorrentemente discutido no campo da Educação como
+				ferramenta positiva. Ocorre que, pela formatação de teleaula ou de aulas assíncronas -
+				sobretudo após o cenário de pandemia causado pelo COVID-19 -, corremos o risco de retormar modelos cada
+				vez mais rígidos e tradicionais no processo de Ensino.</p>
+			<p>O uso de jogos educacionais virtuais se mostra como uma saída para o problema apontado.</p>
+			<p>As premissas utilizadas no desenvolvimento dos jogos são:</p>
+			<ul>
+				<li>1. Criação de todo material em língua portuguesa, inclusive os códigos;</li>
+				<li>2. Utilização da plataforma web;</li>
+				<li>3. Gratuidade do uso dos recursos.</li>
+			</ul>
 		</div>
 		<div id="portfolioTexto">
 			<ul>
@@ -126,8 +146,11 @@
 		</div>
 		<div id="contatoTexto">
 			<p><i>E-mail</i>: rodolfobarreto92@gmail.com</p>
-			<p>Telefone: (75) 9 9220 - 0086 <a href="https://api.whatsapp.com/send?phone=5575992200086&text=Ol%C3%A1%2C%20tudo%20bem%3F" target="_blank"><img src="whatsappicon.png"></a></p>
-			<p>Formulário de uso de recursos didáticos: <a href="https://forms.gle/ieaiG7vuKvYZMDo6A" target="_blank">clique aqui.</a></p>
+			<p>Telefone: (75) 9 9220 - 0086 <a
+					href="https://api.whatsapp.com/send?phone=5575992200086&text=Ol%C3%A1%2C%20tudo%20bem%3F"
+					target="_blank"><img src="whatsappicon.png"></a></p>
+			<p>Formulário de uso de recursos didáticos: <a href="https://forms.gle/ieaiG7vuKvYZMDo6A"
+					target="_blank">clique aqui.</a></p>
 			<ul>
 				<li><a href="https://github.com/portorod" target="_blank"><img src="img/navgithub.png"></a></li>
 				<li><a href="https://www.linkedin.com/in/rodolfo-barreto-71a261163/" target="_blank"><img
