--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>RODOLFO BARRETO</title>
+	<title>EDUJOGOS.COM.BR</title>
 	<link rel="icon" href="icon.png">
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="estilo.css">
